--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "peter-hook"
-version = "1.2.3"
+version = "1.3.0"
 edition = "2024"
 rust-version = "1.85.0"
 authors = ["Peter Hook Contributors"]
@@ -14,6 +14,7 @@ categories = ["development-tools", "command-line-utilities"]
 serde = { version = "1.0", features = ["derive"] }
  toml = "0.8"
  clap = { version = "4.5", features = ["derive"] }
+ clap_complete = "4.5"
  anyhow = "1.0"
  glob = "0.3"
  once_cell = "1.20"
@@ -23,11 +24,16 @@ serde = { version = "1.0", features = ["derive"] }
  serde_json = "1.0"
  dirs = "5.0"
  shellexpand = "3.1"
+ reqwest = { version = "0.12", features = ["blocking", "json"] }
+ hex = "0.4"
+ sha2 = "0.10"
+ tempfile = "3.0"
+ flate2 = "1.0"
+ tar = "0.4"
 
 
 
 [dev-dependencies]
-tempfile = "3.13"
 
 [lints.clippy]
 all = { level = "warn", priority = -1 }
