--- a/hooks.toml
+++ b/hooks.toml
@@ -1,65 +1,72 @@
-# Peter Hook project hooks - using shared Rust quality library
-# Imports comprehensive hooks from shared library
-
-# imports = ["/Users/jfb/.local/peter-hook/shared.toml"]
+# Peter Hook project hooks
+# Matches CI configuration to prevent build failures
 
 # =============================================================================
-# PROJECT-SPECIFIC HOOK GROUPS
+# CODE QUALITY HOOKS (matches CI lint and format jobs)
 # =============================================================================
 
-# [groups.pre-commit]
-# includes = ["comprehensive-pre-commit"]
-# execution = "sequential"
-# description = "Complete pre-commit quality assurance using shared hooks"
+[hooks.format-check]
+command = ["cargo", "fmt", "--all", "--", "--check"]
+modifies_repository = false
+execution_type = "other"
+run_always = true
+description = "Check code formatting (matches CI format job)"
 
-# [groups.commit-msg]
-# includes = ["commit-validation"]
-# execution = "sequential"
-# description = "Commit message validation using shared hooks"
+[hooks.clippy-check]
+command = ["cargo", "clippy", "--all-targets", "--", "-D", "warnings"]
+modifies_repository = false
+execution_type = "other"
+run_always = true
+description = "Run clippy linting (matches CI lint job)"
+env = { RUSTFLAGS = "-D warnings" }
 
-# [groups.security-focused]
-# includes = ["security-suite"]
-# execution = "parallel"
-# description = "Security checks using shared hooks"
+# =============================================================================
+# TEST HOOKS (matches CI test job)
+# =============================================================================
 
-# [groups.code-quality]
-# includes = ["rust-quality"]
-# execution = "sequential"
-# description = "Core code quality using shared hooks"
+[hooks.test-all]
+command = ["cargo", "test", "--all", "--verbose"]
+modifies_repository = false
+execution_type = "other"
+run_always = true
+description = "Run all tests (matches CI test job)"
+env = { RUSTFLAGS = "-D warnings" }
 
-# [groups.quick-check]
-# includes = ["quick-check"]
-# execution = "sequential"
-# description = "Fast checks using shared hooks"
+[hooks.security-audit]
+command = ["cargo", "audit"]
+modifies_repository = false
+execution_type = "other"
+run_always = true
+description = "Run security audit (matches CI audit job)"
 
 # =============================================================================
 # VERSION MANAGEMENT HOOKS
 # =============================================================================
 
 [hooks.version-sync-check]
-command = "versioneer"
-args = ["verify"]
+command = ["versioneer", "verify"]
 include = ["Cargo.toml", "VERSION"]
+modifies_repository = false
+execution_type = "other"
 description = "Verify all version files are synchronized"
 
 [hooks.tag-version-check]
-command = "sh"
-args = ["-c", '''
-if git describe --exact-match --tags HEAD 2>/dev/null | grep -q "peter-hook-v"; then
-    TAG_VERSION=$(git describe --exact-match --tags HEAD | sed "s/peter-hook-v//")
-    CARGO_VERSION=$(versioneer show)
-    if [ "$TAG_VERSION" != "$CARGO_VERSION" ]; then
-        echo "❌ ERROR: Git tag version ($TAG_VERSION) doesn't match Cargo version ($CARGO_VERSION)"
-        echo "Use 'versioneer tag' to create tags that match the current version"
-        exit 1
-    fi
-    echo "✅ Tag version matches Cargo version: $TAG_VERSION"
-fi
-''']
+command = ["sh", "-c", "if git describe --exact-match --tags HEAD 2>/dev/null | grep -q 'peter-hook-v'; then TAG_VERSION=$(git describe --exact-match --tags HEAD | sed 's/peter-hook-v//'); CARGO_VERSION=$(versioneer show); if [ \"$TAG_VERSION\" != \"$CARGO_VERSION\" ]; then echo '❌ ERROR: Git tag version ('$TAG_VERSION') does not match Cargo version ('$CARGO_VERSION')'; echo \"Use 'versioneer tag' to create tags that match the current version\"; exit 1; fi; echo '✅ Tag version matches Cargo version: '$TAG_VERSION; fi"]
 include = ["Cargo.toml", "VERSION"]
+modifies_repository = false
+execution_type = "other"
 description = "Verify git tag version matches Cargo.toml version"
 
-[groups.pre-push]
-includes = ["version-sync-check", "tag-version-check"]
+# =============================================================================
+# HOOK GROUPS
+# =============================================================================
+
+[groups.pre-commit]
+includes = ["format-check", "clippy-check"]
 execution = "sequential"
-description = "Version consistency validation before push"
+description = "Code quality checks before commit (matches CI format + lint jobs)"
+
+[groups.pre-push]
+includes = ["test-all", "security-audit", "version-sync-check", "tag-version-check"]
+execution = "sequential"
+description = "Full validation before push (matches CI test + audit jobs)"
