--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ serde = { version = "1.0", features = ["derive"] }
  serde_json = "1.0"
  dirs = "5.0"
  shellexpand = "3.1"
- reqwest = { version = "0.12", features = ["blocking", "json"] }
+ reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
  hex = "0.4"
  sha2 = "0.10"
  tempfile = "3.0"
