chore: pin Rust version to 1.86.0 for consistent linting
- Add rust-toolchain.toml to pin Rust 1.86.0 locally
- Update all CI workflows to use Rust 1.86.0
- Fix clippy warnings found with stricter version:
  - Use map_or_else instead of map_or to avoid function calls
  - Fix temporary borrow issues in main.rs
  - Allow literal-string-with-formatting-args lint
  - Add missing_const_for_fn allow for PathBuf deref
- Update CLAUDE.md with Rust version management documentation

This ensures identical clippy lints between local development and CI,
preventing surprise breakages from version drift.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "peter-hook"
 version = "3.0.1"
 edition = "2024"
-rust-version = "1.85.0"
+rust-version = "1.86.0"
 authors = ["Peter Hook Contributors"]
 description = "A hierarchical git hooks manager for monorepos"
 license = "MIT"
@@ -41,6 +41,7 @@ pedantic = { level = "warn", priority = -1 }
 nursery = { level = "warn", priority = -1 }
 cargo = { level = "warn", priority = -1 }
 multiple-crate-versions = "allow"
+literal-string-with-formatting-args = "allow"
 
 [lints.rust]
 unsafe_code = "forbid"
