--- a/.github/workflows/deps.yml
+++ b/.github/workflows/deps.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Rust toolchain
-        uses: dtolnay/rust-toolchain@stable
+        uses: dtolnay/rust-toolchain@1.86.0
 
       - name: Install cargo-audit
         run: cargo install cargo-audit
@@ -79,7 +79,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Rust toolchain
-        uses: dtolnay/rust-toolchain@stable
+        uses: dtolnay/rust-toolchain@1.86.0
 
       - name: Install cargo-outdated
         run: cargo install cargo-outdated
@@ -123,7 +123,7 @@ jobs:
         uses: dtolnay/rust-toolchain@nightly
 
       - name: Install Rust stable
-        uses: dtolnay/rust-toolchain@stable
+        uses: dtolnay/rust-toolchain@1.86.0
 
       - name: Generate minimal lockfile
         run: |
@@ -176,7 +176,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Rust toolchain
-        uses: dtolnay/rust-toolchain@stable
+        uses: dtolnay/rust-toolchain@1.86.0
 
       - name: Install cargo-deny
         run: cargo install cargo-deny
