--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,9 @@ serde = { version = "1.0", features = ["derive"] }
 
 
 [dev-dependencies]
+assert_cmd = "2.0"
+mockito = "1.5"
+serial_test = "3.0"
 
 [lints.clippy]
 all = { level = "warn", priority = -1 }
