--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "peter-hook"
-version = "3.0.3"
+version = "3.0.4"
 edition = "2024"
 rust-version = "1.86.0"
 authors = ["Peter Hook Contributors"]
@@ -34,6 +34,9 @@ serde = { version = "1.0", features = ["derive"] }
 
 
 [dev-dependencies]
+assert_cmd = "2.0"
+mockito = "1.5"
+serial_test = "3.0"
 
 [lints.clippy]
 all = { level = "warn", priority = -1 }
